fixed cropped image in responsive

--- a/src/components/SurpriseGuests/SurpriseGuests.module.scss
+++ b/src/components/SurpriseGuests/SurpriseGuests.module.scss
@@ -51,7 +51,7 @@
 		display: flex;
 		justify-content: space-between;
 		gap: 90px;
-		@media (max-width: 768px) {
+		@media (max-width: 1024px) {
 			flex-direction: column;
 			align-items: center;
 			gap: 40px;
@@ -96,6 +96,14 @@
 			width: 478px;
 			height: 369px;
 			transform: translateY(22px);
+			@media (max-width: 1200px) and (min-width: 1024px) {
+				img {
+					object-fit: scale-down;
+				}
+			}
+			@media (max-width: 1024px) {
+				transform: translateY(0);
+			}
 		}
 	}
 	.service {
